public/static/css/map.css
/* ... */
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-icon img {
  width: 22px;
  height: 22px;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-icon {
    font-size: 8px;
  }
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-icon img {
    width: 22px;
    height: 22px;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-name {
  box-sizing: border-box;
  float: left;
  width: auto;
  height: auto;
  min-height: auto;
  font-size: 8px;
  line-height: 22px;
  text-transform: uppercase;
  font-weight: bold;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-name {
    font-size: 8px;
    width: 116px;
    line-height: 22px;
    font-weight: bold;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-tools {
  box-sizing: border-box;
  float: right;
  width: auto;
  height: auto;
  min-height: auto;
  font-size: 16px;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-tools select,
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-tools option {
  color: #2d2d2d;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-tools {
    font-size: 12px;
    width: 150px;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-share-embed {
  box-sizing: border-box;
  float: right;
  width: 100px;
  height: auto;
  min-height: auto;
  font-size: 12px;
  text-transform: uppercase;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-share-embed {
    display: none;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-help {
  box-sizing: border-box;
  float: right;
  width: 28px;
  height: auto;
  min-height: auto;
  font-size: 16px;
  padding: 0 0 0 12px;
  margin-top: -3px;
  text-align: center;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-nav {
  box-sizing: border-box;
  float: right;
  width: 82px;
  height: auto;
  min-height: auto;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-nav a {
  margin-left: 5px;
  display: block;
  float: left;
  width: 22px;
  height: 22px;
  line-height: 22px;
  background-color: #f5f5f5;
  color: #181818;
  text-align: center;
  font-weight: bold;
  font-size: 17px;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend {
  box-sizing: border-box;
  float: right;
  width: 30px;
  height: auto;
  min-height: auto;
  font-size: 16px;
  padding-left: 12px;
  cursor: pointer;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend ul {
  box-sizing: border-box;
  float: left;
  width: 24px;
  height: auto;
  min-height: auto;
  float: right;
  height: 100%;
  display: block;
  padding: 0;
  margin: 0;
  list-style-type: none;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend li {
  box-sizing: border-box;
  float: left;
  width: 11px;
  height: 11px;
  min-height: auto;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend {
    font-size: 12px;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-show-info {
  cursor: pointer;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend-full {
  box-sizing: border-box;
  float: left;
  width: 350px;
  height: 80px;
  min-height: 80px;
  padding: 16px;
  word-wrap: break-word;
  background-color: #f5f5f5;
  color: #2d2d2d;
  border-radius: 5px;
  margin: 12px;
  font-size: 12px;
  position: absolute;
  top: -106px;
  right: -10px;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend-full {
    width: 83.5%;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-meta .cgr-vis-legend-full i {
  line-height: 20px;
  padding: 2px 4px 2px 4px;
  border-radius: 4px;
  font-style: normal;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-info {
  box-sizing: border-box;
  float: left;
  width: 50%;
  height: auto;
  min-height: auto;
  padding: 16px;
  word-wrap: break-word;
  background-color: #f5f5f5;
  color: #2d2d2d;
  border-radius: 5px;
  margin: 12px;
  font-size: 12px;
  display: none;
  position: absolute;
  top: 12px;
  left: 12px;
  z-index: 101;
}
@media (max-width: 568px) {
  .cgr-vis.cgr-vis-choropleth .cgr-vis-info {
    width: 80%;
  }
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-info .cgr-vis-share {
  box-sizing: border-box;
  float: left;
  width: 100%;
  height: auto;
  min-height: auto;
  font-size: 28px;
  line-height: 16px;
  padding: 0 12px 0 0;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-info-close,
.cgr-vis.cgr-vis-choropleth .cgr-vis-place-close,
.cgr-vis.cgr-vis-choropleth .cgr-vis-legend-full-close {
  float: right;
  cursor: pointer;
  width: auto;
  height: auto;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-info-title {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 4px;
  border-bottom: 1px solid #f5f5f5;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-info-iframe-code {
  display: none;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-place {
  box-sizing: border-box;
  float: left;
  width: 40%;
  height: auto;
  min-height: auto;
  padding: 16px;
  word-wrap: break-word;
  background-color: #f5f5f5;
  color: #2d2d2d;
  border-radius: 5px;
  margin: 12px;
  font-size: 12px;
  display: none;
  position: absolute;
  top: 12px;
  right: 12px;
  z-index: 100;
}
.cgr-vis.cgr-vis-choropleth .cgr-vis-place-title {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 4px;
  border-bottom: 1px solid #f5f5f5;
}
.cgr-vis.cgr-vis-choropleth a.cgr-vis-place-action {
  background-color: #2d2d2d;
  color: #f5f5f5;
  padding: 8px;
}
.cgr-vis.cgr-vis-choropleth a.cgr-vis-place-action:hover {
  background-color: #3a3a3a;
  color: #f5f5f5;
}
.cgr-vis.cgr-vis-choropleth .leaflet-container {
  font-family: 'Lato,' 'Helvetica Neue', Arial, Helvetica, sans-serif;
  font-size: 16px;
  line-height: 24px;
  background-color: #8bbee1;
  outline: 0;
}
.cgr-vis.cgr-vis-choropleth .leaflet-zoom-box {
  border: 2px dotted #38f;
  background: rgba(255, 255, 255, 0.5);
}
/* ... */

